--- a/meson.build
+++ b/meson.build
@@ -22,7 +22,9 @@ if not lv2.found() and not ladspa
 endif
 
 plugins = {
-  'tubeamp': {
+  'single2humbucker': {
+    'ladspa': true
+  }, 'tubeamp': {
     'gui': true,
     'lv2src': ['kpp_tubeamp.cpp'],
     'libs': ['zita-convolver', 'zita-resampler']
